--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -20,6 +20,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.js"></script>
   <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"> </script>
+  <!-- <script src="/javascripts/js/buyer/cart.js"></script> -->
 
 </head>
 <body>
@@ -50,26 +51,19 @@
                
                 <div class="for-user">
                     <div class="icon-info">
-                        <div class="cart-not-login">
-                            <a href="/shop/cart"><img src="/images/empty-shopping-cart.png" alt="" style="width: 28.05px; height: 29.2px; margin-left: 5px; margin-top: 6px;"></a>
-                            <div 
-                                style="background-color: #f5a623;
-                                width: 1.4rem;
-                                height: 1rem;
-                                border-radius: .6rem;
-                                position: absolute;
-                                left: 24px;
-                                top: 5px;
-                                color: #fff;
-                                text-align: center;
-                                line-height: 1;
-                                font-weight: bold;
-                                font-size: 82%;">
+                        <div class="cart-not-login" id="list-cart">
+                            <a href="/cart"><img src="/images/empty-shopping-cart.png" alt="" style="width: 28.05px; height: 29.2px; margin-left: 5px; margin-top: 6px;"></a>
+                            <div class="cart-show">
                             <% if (cart){ %>
-                                <%-cart.length%>
+                                <div class="cart-count">
+                                    <%-cart%>
+                                </div>
                             <%} else {%>
                                 <%-'0'%>
                             <%}%>
+                            </div>
+                            <div class="test">
+                                
                             </div>
                         </div>
                         <%if (userInfo == null) { %> 
@@ -86,7 +80,7 @@
                                     <a class="dropdown-item" href="/user/account/profile">Tài khoản</a>
                                     <a class="dropdown-item" href="#">Another action</a>
                                     <a class="dropdown-item" href="/logout">Đăng xuất</a>
-                                  </div>
+                                </div>
                             </div>
                         
                         <%}%>
